memory leak in java.desktop/unix/native/common/awt/fontpath.c

XMLWordPrintable

    • b155
    • x86_64
    • linux

        FULL PRODUCT VERSION :


        A DESCRIPTION OF THE PROBLEM :
        I found a tiny memory leak in java.desktop/unix/native/common/awt/fontpath.c thus I wish to get a Jira entry ID to make a proper webrev task. Thanks in advance. Regards.


        REPRODUCIBILITY :
        This bug can be reproduced always.

              Assignee:
              Abhijit Roy (Inactive)
              Reporter:
              Webbug Group
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: