8171836: Memory leak in java.desktop/unix/native/common/awt/fontpath.c

Reviewed-by: prr, arapte